Modified email content and added a link to signup form from login form.

--- a/log_in.html
+++ b/log_in.html
@@ -31,6 +31,7 @@
                 <button type="submit" class="signup-btn">Login</button>
                 <p id="error-message" style="color: red; text-align: center;"></p>
             </form>
+            <p class="login-link">Don't have an account? <a href="sign_up.html">Sign up</a></p>
         </div>
     </div>
     
